CADC-12341 added files and transfer int-tests