@@ -69,27 +69,15 @@
 
 package ca.nrc.cadc.conformance.vos;
 
-import ca.nrc.cadc.auth.AuthMethod;
 import ca.nrc.cadc.auth.RunnableAction;
-import ca.nrc.cadc.auth.SSLUtil;
-import ca.nrc.cadc.net.FileContent;
-import ca.nrc.cadc.net.HttpDelete;
 import ca.nrc.cadc.net.HttpGet;
-import ca.nrc.cadc.net.HttpPost;
-import ca.nrc.cadc.net.HttpUpload;
 import ca.nrc.cadc.net.NetUtil;
-import ca.nrc.cadc.reg.Standards;
-import ca.nrc.cadc.reg.client.RegistryClient;
 import ca.nrc.cadc.util.FileUtil;
 import ca.nrc.cadc.util.Log4jInit;
-import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
-import java.io.IOException;
-import java.io.InputStream;
 import java.net.URI;
 import java.net.URL;
-import java.nio.charset.StandardCharsets;
 import javax.security.auth.Subject;
 import org.apache.log4j.Level;
 import org.apache.log4j.Logger;
@@ -97,37 +85,23 @@ import org.junit.Assert;
 import org.junit.Test;
 import org.opencadc.vospace.ContainerNode;
 import org.opencadc.vospace.DataNode;
+import org.opencadc.vospace.Direction;
 import org.opencadc.vospace.LinkNode;
-import org.opencadc.vospace.Node;
-import org.opencadc.vospace.NodeParsingException;
 import org.opencadc.vospace.NodeProperty;
 import org.opencadc.vospace.NodeReader;
-import org.opencadc.vospace.NodeWriter;
 import org.opencadc.vospace.VOS;
 import org.opencadc.vospace.VOSURI;
 
-public class NodesTest {
-
+public class NodesTest extends VOSTest {
     private static final Logger log = Logger.getLogger(NodesTest.class);
-    public static final URI SERVICE_RESOURCE_ID = URI.create("ivo://opencadc.org/vault");
-    private static final String TEST_CERT_NAME = "vault-test.pem";
-    private static final String XML_CONTENT_TYPE = "application/xml";
-
-    private final URL serviceURL;
-    private final Subject authSubject;
 
     static {
         Log4jInit.setLevel("ca.nrc.cadc.conformance.vos", Level.DEBUG);
+        Log4jInit.setLevel("ca.nrc.cadc.vos", Level.DEBUG);
     }
 
     public NodesTest() {
-        RegistryClient regClient = new RegistryClient();
-        serviceURL = regClient.getServiceURL(SERVICE_RESOURCE_ID, Standards.VOSPACE_NODES_20, AuthMethod.ANON);
-        log.info(String.format("%s: %s", Standards.VOSPACE_NODES_20, serviceURL));
-
-        File testCert = FileUtil.getFileFromResource(TEST_CERT_NAME, NodesTest.class);
-        authSubject = SSLUtil.createSubject(testCert);
-        log.debug("authSubject: " + authSubject);
+        super();
     }
 
     @Test
@@ -135,7 +109,7 @@ public class NodesTest {
         try {
             // create a simple container node
             String name = "container-node";
-            URL nodeURL = new URL(String.format("%s/%s", serviceURL, name));
+            URL nodeURL = new URL(String.format("%s/%s", nodesServiceURL, name));
             VOSURI vosURI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + name));
 
             ContainerNode testNode = new ContainerNode(name, true);
@@ -152,22 +126,23 @@ public class NodesTest {
 
             // POST an update to the node
             String updatedName = "updated-container-node";
-            URL updatedNodeURL = new URL(String.format("%s/%s", serviceURL, updatedName));
-            VOSURI updatedVOSURI = new VOSURI("" + updatedName);
-            testNode.setInheritPermissions(false);
+            NodeProperty nodeProperty = new NodeProperty(VOS.PROPERTY_URI_TITLE, updatedName);
             testNode.setName(updatedName);
-
-            post(updatedNodeURL, updatedVOSURI, testNode);
+            testNode.setInheritPermissions(false);
+            testNode.properties.add(nodeProperty);
+            post(nodeURL, vosURI, testNode);
 
             // GET the updated node
+            URL updatedNodeURL = new URL(String.format("%s/%s", nodesServiceURL, updatedName));
+            VOSURI updatedVOSURI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + updatedName));
             result = get(updatedNodeURL, 200);
 
             Assert.assertTrue(result.node instanceof ContainerNode);
             ContainerNode updatedNode = (ContainerNode) result.node;
             Assert.assertEquals(testNode, updatedNode);
-            Assert.assertEquals(vosURI, result.vosURI);
+            Assert.assertEquals(updatedVOSURI, result.vosURI);
             Assert.assertEquals(testNode.isInheritPermissions(), updatedNode.isInheritPermissions());
-            Assert.assertEquals(testNode.getName(), updatedNode.getName());
+            Assert.assertTrue(updatedNode.properties.contains(nodeProperty));
 
             // DELETE the node
             delete(updatedNodeURL);
@@ -186,11 +161,9 @@ public class NodesTest {
         try {
             // create a simple data node
             String name = "data-node";
-            URL nodeURL = new URL(String.format("%s/%s", serviceURL.toString(), name));
+            URL nodeURL = new URL(String.format("%s/%s", nodesServiceURL.toString(), name));
             VOSURI vosURI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + name));
-            URI storageID = URI.create("cadc:TEST/file.txt");
-
-            DataNode testNode = new DataNode(name, storageID);
+            DataNode testNode = new DataNode(name, URI.create("storageID"));
 
             // PUT the node
             put(nodeURL, vosURI, testNode);
@@ -206,20 +179,22 @@ public class NodesTest {
 
             // POST an update to the node
             String updatedName = "updated-data-node";
-            URL updatedNodeURL = new URL(String.format("%s/%s", serviceURL, updatedName));
-            VOSURI updatedVOSURI = new VOSURI("" + updatedName);
+            NodeProperty nodeProperty = new NodeProperty(VOS.PROPERTY_URI_TITLE, updatedName);
             testNode.setName(updatedName);
-
-            post(updatedNodeURL, updatedVOSURI, testNode);
+            testNode.properties.add(nodeProperty);
+            post(nodeURL, vosURI, testNode);
 
             // GET the updated node
+            URL updatedNodeURL = new URL(String.format("%s/%s", nodesServiceURL, updatedName));
+            VOSURI updatedVOSURI = new VOSURI("" + updatedName);
             result = get(updatedNodeURL, 200);
 
             DataNode updatedNode = (DataNode) result.node;
             Assert.assertEquals(testNode, updatedNode);
-            Assert.assertEquals(vosURI, result.vosURI);
+            Assert.assertEquals(updatedVOSURI, result.vosURI);
             Assert.assertEquals(testNode.getStorageID(), updatedNode.getStorageID());
             Assert.assertEquals(testNode.getName(), updatedNode.getName());
+            Assert.assertTrue(updatedNode.properties.contains(nodeProperty));
 
             // DELETE the node
             delete(updatedNodeURL);
@@ -238,11 +213,9 @@ public class NodesTest {
         try {
             // create a simple link node
             String name = "link-node";
-            URL nodeURL = new URL(String.format("%s/%s", serviceURL.toString(), name));
+            URL nodeURL = new URL(String.format("%s/%s", nodesServiceURL.toString(), name));
             VOSURI vosURI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + name));
-            URI target = URI.create("target");
-
-            LinkNode testNode = new LinkNode(name, target);
+            LinkNode testNode = new LinkNode(name, URI.create("target"));
 
             // PUT the node
             put(nodeURL, vosURI, testNode);
@@ -259,21 +232,23 @@ public class NodesTest {
 
             // POST an update to the node
             String updatedName = "updated-link-node";
-            URL updatedNodeURL = new URL(String.format("%s/%s", serviceURL, updatedName));
-            VOSURI updatedVOSURI = new VOSURI("" + updatedName);
+            NodeProperty nodeProperty = new NodeProperty(VOS.PROPERTY_URI_TITLE, updatedName);
             testNode.setName(updatedName);
-
-            post(updatedNodeURL, updatedVOSURI, testNode);
+            testNode.properties.add(nodeProperty);
+            post(nodeURL, vosURI, testNode);
 
             // GET the updated node
+            URL updatedNodeURL = new URL(String.format("%s/%s", nodesServiceURL, updatedName));
+            VOSURI updatedVOSURI = new VOSURI("" + updatedName);
             result = get(updatedNodeURL, 200);
 
             Assert.assertTrue(result.node instanceof LinkNode);
             LinkNode updatedNode = (LinkNode) result.node;
             Assert.assertEquals(testNode, updatedNode);
-            Assert.assertEquals(vosURI, result.vosURI);
+            Assert.assertEquals(updatedVOSURI, result.vosURI);
             Assert.assertEquals(testNode.getTarget(), updatedNode.getTarget());
             Assert.assertEquals(testNode.getName(), updatedNode.getName());
+            Assert.assertTrue(updatedNode.properties.contains(nodeProperty));
 
             // DELETE the node
             delete(updatedNodeURL);
@@ -292,7 +267,7 @@ public class NodesTest {
         try {
             // create a fully populated container node
             String name = "complex-node";
-            URL nodeURL = new URL(String.format("%s/%s", serviceURL, name));
+            URL nodeURL = new URL(String.format("%s/%s", nodesServiceURL, name));
             VOSURI vosURI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + name));
             NodeProperty titleProperty = new NodeProperty(VOS.PROPERTY_URI_TITLE, "title");
             NodeProperty descriptionProperty = new NodeProperty(VOS.PROPERTY_URI_DESCRIPTION, "description");
@@ -300,7 +275,7 @@ public class NodesTest {
             URI writeGroup = URI.create("ivo://cadc.nrc.ca/node?writeGroup");
 
             ContainerNode testNode = new ContainerNode(name, true);
-            testNode.creatorID = authSubject;;
+            testNode.creatorID = authSubject;
             testNode.isPublic = true;
             testNode.isLocked = true;
             testNode.properties.add(titleProperty);
@@ -381,46 +356,46 @@ public class NodesTest {
         try {
             // create root container node
             String name = "batch-parent";
-            URL parentURL = new URL(String.format("%s/%s", serviceURL.toString(), name));
+            URL parentURL = new URL(String.format("%s/%s", nodesServiceURL.toString(), name));
             VOSURI parentURI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + name));
             ContainerNode parent = new ContainerNode(name, true);
             put(parentURL, parentURI, parent);
 
             // add 6 direct child nodes
             String child1Name = "batch-child-1";
-            URL child1URL = new URL(String.format("%s/%s", serviceURL, name));
-            VOSURI child1URI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + name));
-            ContainerNode child1 = new ContainerNode(name, true);
+            URL child1URL = new URL(String.format("%s/%s", nodesServiceURL, child1Name));
+            VOSURI child1URI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + child1Name));
+            ContainerNode child1 = new ContainerNode(child1Name, true);
             put(child1URL, child1URI, child1);
 
             String child2Name = "batch-child-2";
-            URL child2URL = new URL(String.format("%s/%s", serviceURL, name));
-            VOSURI child2URI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + name));
-            DataNode child2 = new DataNode(name, URI.create(""));
+            URL child2URL = new URL(String.format("%s/%s", nodesServiceURL, child2Name));
+            VOSURI child2URI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + child2Name));
+            DataNode child2 = new DataNode(child2Name, URI.create("storageID"));
             put(child2URL, child2URI, child2);
 
             String child3Name = "batch-child-3";
-            URL child3URL = new URL(String.format("%s/%s", serviceURL, name));
-            VOSURI child3URI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + name));
-            LinkNode child3= new LinkNode(name, URI.create(""));
+            URL child3URL = new URL(String.format("%s/%s", nodesServiceURL, child3Name));
+            VOSURI child3URI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + child3Name));
+            LinkNode child3= new LinkNode(child3Name, URI.create("target"));
             put(child3URL, child3URI, child3);
 
             String child4Name = "batch-child-4";
-            URL child4URL = new URL(String.format("%s/%s", serviceURL, name));
-            VOSURI child4URI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + name));
-            ContainerNode child4 = new ContainerNode(name, true);
-            put(child1URL, child1URI, child4);
+            URL child4URL = new URL(String.format("%s/%s", nodesServiceURL, child4Name));
+            VOSURI child4URI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + child4Name));
+            ContainerNode child4 = new ContainerNode(child4Name, true);
+            put(child4URL, child4URI, child4);
 
             String child5Name = "batch-child-5";
-            URL child5URL = new URL(String.format("%s/%s", serviceURL, name));
-            VOSURI child5URI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + name));
-            DataNode child5 = new DataNode(name, URI.create(""));
+            URL child5URL = new URL(String.format("%s/%s", nodesServiceURL, child5Name));
+            VOSURI child5URI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + child5Name));
+            DataNode child5 = new DataNode(child5Name, URI.create("storageID"));
             put(child5URL, child5URI, child5);
 
             String child6Name = "batch-child-6";
-            URL child6URL = new URL(String.format("%s/%s", serviceURL, name));
-            VOSURI child6URI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + name));
-            LinkNode child6= new LinkNode(name, URI.create(""));
+            URL child6URL = new URL(String.format("%s/%s", nodesServiceURL, child6Name));
+            VOSURI child6URI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + child6Name));
+            LinkNode child6= new LinkNode(child6Name, URI.create("target"));
             put(child6URL, child6URI, child6);
 
             // Get nodes 1 - 3
@@ -457,6 +432,13 @@ public class NodesTest {
             Assert.assertEquals(parentNode.getNodes().size(), 2);
             Assert.assertTrue(parentNode.getNodes().contains(child5));
             Assert.assertTrue(parentNode.getNodes().contains(child6));
+
+            // delete the parent node
+            delete(parentURL);
+
+            // GET the deleted node, which should fail
+            get(parentURL, 404);
+
         } catch (Exception e) {
             log.error("Unexpected error", e);
             Assert.fail("Unexpected error: " + e);
@@ -468,28 +450,28 @@ public class NodesTest {
         try {
             // create root container node
             String name = "limit-parent";
-            URL parentURL = new URL(String.format("%s/%s", serviceURL.toString(), name));
+            URL parentURL = new URL(String.format("%s/%s", nodesServiceURL.toString(), name));
             VOSURI parentURI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + name));
             ContainerNode parent = new ContainerNode(name, true);
             put(parentURL, parentURI, parent);
 
             // add 3 direct child nodes
             String child1Name = "limit-child-1";
-            URL child1URL = new URL(String.format("%s/%s", serviceURL, name));
-            VOSURI child1URI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + name));
-            ContainerNode child1 = new ContainerNode(name, true);
+            URL child1URL = new URL(String.format("%s/%s", nodesServiceURL, child1Name));
+            VOSURI child1URI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + child1Name));
+            ContainerNode child1 = new ContainerNode(child1Name, true);
             put(child1URL, child1URI, child1);
 
             String child2Name = "limit-child-2";
-            URL child2URL = new URL(String.format("%s/%s", serviceURL, name));
-            VOSURI child2URI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + name));
-            DataNode child2 = new DataNode(name, URI.create(""));
+            URL child2URL = new URL(String.format("%s/%s", nodesServiceURL, child2Name));
+            VOSURI child2URI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + child2Name));
+            DataNode child2 = new DataNode(child2Name, URI.create("storageID"));
             put(child2URL, child2URI, child2);
 
             String child3Name = "limit-child-3";
-            URL child3URL = new URL(String.format("%s/%s", serviceURL, name));
-            VOSURI child3URI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + name));
-            LinkNode child3= new LinkNode(name, URI.create(""));
+            URL child3URL = new URL(String.format("%s/%s", nodesServiceURL, child3Name));
+            VOSURI child3URI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + child3Name));
+            LinkNode child3= new LinkNode(child3Name, URI.create("target"));
             put(child3URL, child3URI, child3);
 
             // get the node with a limit of 2 child nodes
@@ -501,6 +483,13 @@ public class NodesTest {
             Assert.assertEquals(parentNode.getNodes().size(), 2);
             Assert.assertTrue(parentNode.getNodes().contains(child1));
             Assert.assertTrue(parentNode.getNodes().contains(child2));
+
+            // delete the parent node
+            delete(parentURL);
+
+            // GET the deleted node, which should fail
+            get(parentURL, 404);
+
         } catch (Exception e) {
             log.error("Unexpected error", e);
             Assert.fail("Unexpected error: " + e);
@@ -512,22 +501,24 @@ public class NodesTest {
         try {
             // create a fully populated container node
             String name = "detail-node";
-            URL nodeURL = new URL(String.format("%s/%s", serviceURL, name));
-            VOSURI vosURI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + name));
+            URL nodeURL = new URL(String.format("%s/%s", nodesServiceURL, name));
+            VOSURI nodeURI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + name));
             NodeProperty titleProperty = new NodeProperty(VOS.PROPERTY_URI_TITLE, "title");
             NodeProperty descriptionProperty = new NodeProperty(VOS.PROPERTY_URI_DESCRIPTION, "description");
             URI readGroup = URI.create("ivo://cadc.nrc.ca/node?ReadGroup");
             URI writeGroup = URI.create("ivo://cadc.nrc.ca/node?writeGroup");
 
             ContainerNode testNode = new ContainerNode(name, true);
-            testNode.creatorID = authSubject;;
+            testNode.creatorID = authSubject;
             testNode.isPublic = true;
             testNode.isLocked = true;
             testNode.properties.add(titleProperty);
             testNode.properties.add(descriptionProperty);
             testNode.readOnlyGroup.add(readGroup);
             testNode.readWriteGroup.add(writeGroup);
-            testNode.getNodes().add(new DataNode("detail-child-node", URI.create("resource")));
+            testNode.getNodes().add(new DataNode("detail-child-node", URI.create("storageID")));
+
+            put(nodeURL, nodeURI, testNode);
 
             // get the node with a min detail
             URL detailURL = new URL(nodeURL + "?detail=min");
@@ -547,75 +538,71 @@ public class NodesTest {
 
             Assert.assertFalse("node properties shouldn't be empty", parentNode.properties.isEmpty());
             Assert.assertFalse("child nodes shouldn't be empty", parentNode.getNodes().isEmpty());
+
+            // delete the node
+            delete(nodeURL);
+
+            // GET the deleted node, which should fail
+            get(nodeURL, 404);
+
         } catch (Exception e) {
             log.error("Unexpected error", e);
             Assert.fail("Unexpected error: " + e);
         }
     }
 
-    private void put(URL nodeURL, VOSURI vosURI, Node node)
-        throws IOException {
-        StringBuilder sb = new StringBuilder();
-        NodeWriter writer = new NodeWriter();
-        writer.write(vosURI, node, sb);
-        InputStream in = new ByteArrayInputStream(sb.toString().getBytes());
+    @Test
+    public void dataViewTest() {
+        try {
+            // upload test file
+            String name = "view-data-test.txt";
+            URL nodeURL = new URL(String.format("%s/%s", nodesServiceURL, name));
+            VOSURI nodeURI = new VOSURI(URI.create("vos://cadc.nrc.ca!vospace/" + name));
+            File testFile = FileUtil.getFileFromResource(name, NodesTest.class);
 
-        HttpUpload put = new HttpUpload(in, nodeURL);
-        put.setRequestProperty("Content-Type", XML_CONTENT_TYPE);
-        Subject.doAs(authSubject, new RunnableAction(put));
-        log.debug("responseCode: " + put.getResponseCode());
-        Assert.assertEquals("PUT response code should be 201",
-                            201, put.getResponseCode());
-        Assert.assertNull("PUT throwable should be null", put.getThrowable());
-    }
+            put(nodeURL, testFile);
 
-    private NodeReader.NodeReaderResult get(URL url, int responseCode)
-        throws NodeParsingException {
-        ByteArrayOutputStream out = new ByteArrayOutputStream();
-        HttpGet get = new HttpGet(url, out);
-        Subject.doAs(authSubject, new RunnableAction(get));
-        log.debug("responseCode: " + get.getResponseCode());
-        Assert.assertEquals("GET response code should be " + responseCode,
-                            responseCode, get.getResponseCode());
+            // get the node with view=data
+            URL getURL = new URL(nodeURL + "?view=data");
+            ByteArrayOutputStream out = new ByteArrayOutputStream();
+            HttpGet get = new HttpGet(getURL, out);
+            get.setFollowRedirects(false);
+            Subject.doAs(authSubject, new RunnableAction(get));
 
-        if (responseCode == 200) {
-            Assert.assertNull("GET throwable should be null", get.getThrowable());
-            Assert.assertEquals("GET Content-Type should be " + XML_CONTENT_TYPE, XML_CONTENT_TYPE, get.getContentType());
+            Assert.assertNotNull(get.getThrowable());
+            URL redirectURL = get.getRedirectURL();
+            Assert.assertNotNull(redirectURL);
+            log.debug("location = " + redirectURL);
 
-            NodeReader reader = new NodeReader();
-            NodeReader.NodeReaderResult result = reader.read(out.toString());
-            Assert.assertNotNull(result);
-            Assert.assertNotNull(result.node);
-            Assert.assertNotNull(result.vosURI);
-            return result;
-        } else {
-            return null;
+            String query = redirectURL.getQuery();
+            String[] params = query.split("&");
+            Assert.assertEquals(3, params.length);
+            for (String p : params) {
+                String[] pv = p.split("=");
+                String key = pv[0];
+                String val = NetUtil.decode(pv[1]);
+                Assert.assertEquals(2, pv.length);
+                if ("target".equalsIgnoreCase(key)) {
+                    Assert.assertEquals(nodeURI.getURI().toASCIIString(), val);
+                } else if("protocol".equalsIgnoreCase(key)) {
+                    Assert.assertEquals(VOS.PROTOCOL_HTTP_GET.toASCIIString(), val);
+                } else if("direction".equalsIgnoreCase(key)) {
+                    Assert.assertEquals(Direction.pullFromVoSpace.getValue(), val);
+                } else {
+                    Assert.fail(String.format("unexpected transfer parameter: %s = %s", key, val));
+                }
+            }
+
+            // delete the file
+            delete(nodeURL);
+
+            // GET the deleted node, which should fail
+            get(nodeURL, 404);
+
+        } catch (Exception e) {
+            log.error("Unexpected error", e);
+            Assert.fail("Unexpected error: " + e);
         }
-    }
-
-    private void post(URL nodeURL, VOSURI vosURI, Node node)
-        throws IOException {
-        StringBuilder sb = new StringBuilder();
-        NodeWriter writer = new NodeWriter();
-        writer.write(vosURI, node, sb);
-
-        FileContent content = new FileContent(sb.toString(), XML_CONTENT_TYPE, StandardCharsets.UTF_8);
-
-        HttpPost post = new HttpPost(nodeURL, content, true);
-        Subject.doAs(authSubject, new RunnableAction(post));
-        log.debug("responseCode: " + post.getResponseCode());
-        Assert.assertEquals("POST response code should be 200",
-                            200, post.getResponseCode());
-        Assert.assertNull("POST throwable should be null", post.getThrowable());
-    }
-
-    private void delete(URL nodeURL) {
-        HttpDelete delete = new HttpDelete(nodeURL, true);
-        Subject.doAs(authSubject, new RunnableAction(delete));
-        log.debug("responseCode: " + delete.getResponseCode());
-        Assert.assertEquals("DELETE response code should be 204",
-                            204, delete.getResponseCode());
-        Assert.assertNull("DELETE throwable should be null", delete.getThrowable());
     }
 
 }
